--- a/styles/style.css
+++ b/styles/style.css
@@ -94,12 +94,11 @@ fieldset {
 }
 
 .content {
-  /* display: flex;
-  align-items: flex-end; */
   display: grid;
   grid-template-columns: 2fr 1fr;
-  gap: 20px;
+  gap: 30px;
   align-items: end;
+  margin: 133px 30px;
 }
 
 .button {
@@ -179,7 +178,8 @@ fieldset {
 
 .search-form__checkbox-list {
   display: flex;
-  gap: 10px;
+  gap: 15px;
+  margin-bottom: 5px;
 }
 
 .search-form__pseudo-checkbox {
@@ -229,6 +229,7 @@ input[type='text']:focus {
 .search-form__fieldset-title {
   font-weight: 400;
   font-size: 18px;
+  margin-bottom: 5px;
 }
 
 .title {
